# SpACER

./: .gitignore  LICENSE  README.md  measure_positional_cer.py  pyproject.toml  spatial_uncertainty.py  test_docbank.py
notebooks/: analyse_ocr.py  char_count_spacer.py  crossword_toy.py  docbank_decomposition.py  docbank_page_level_validation.py  end_to_end_analysis.py  hallucination_detection.py  hiertext_decomposition.py  hiertext_page_level_validation.py  ocr_decomposition.py  page_level_validation.py  select_docbank.py  spacer_jsd_example.py  spiritualist_decomposition.py  spiritualist_page_level_validation.py  visualise_ssu.py
ocr_models/: base.py  easyocr.py  paddleocr.py  tesseract.py  trocr.py  trocr2.py
scripts/: crop_utils.py  extract_docbank_ssu_text.py  extract_gt_ssu_boxes.py  extract_gt_ssu_boxes_word.py  extract_hiertext_ssu_text.py  extract_ssu_text.py  granite_docling_batch_vllm.py  granite_docling_crop.py  infer_characters.py  infer_characters_docbank.py  infer_characters_hiertext.py  mocr_batch_vllm.py  mocr_crop_vllm.py  olmocr_crop_deepinfra.py  olmocr_page_deepinfra.py  page_cer_validation.py  ppocr_crops.py  process_alto_labelled.py  resize_images.py  run_all_ocr.py  run_bbox_ocr.py  run_docling_ocr.py  run_docling_wholepage_ocr.py  run_ocr.py  tag_alto_ssu.py
